[package]
name = "hsr-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
fd-lock = "4.0.0"
reqwest = { version = "0.11.18", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
winapi = { version = "0.3.9", features = ["winuser"] }
